--- a/240731-多语言处理/i18n.md
+++ b/240731-多语言处理/i18n.md
@@ -132,14 +132,36 @@ export const setLang = (lang: Lang) => {
 
   location.reload()
 }
+
+// 合并对象函数
+export const merge = <T extends object, U extends object>(target: T, source: U): T & U => {
+  const result = { ...target } as T & U
+
+  Object.keys(source).forEach(function (key) {
+    if (
+      (source.hasOwnProperty(key) && source[key] && typeof source[key] === 'object') ||
+      key === '__proto__' ||
+      key === 'constructor'
+    ) {
+      result[key] = merge(result[key] || {}, source[key])
+      return
+    }
+    result[key] = source[key]
+  })
+
+  return result
+}
 ```
 
-**_index.ts_** 最后导出语言
+**_index.ts_**  通过设置fallback语言和获取目标语言，通过合并后最后导出语言，合并是为了防止当目标语言不属于主要维护语言，出现存在遗漏字段的情况，遗落的字段由主要维护语言补上
 
 ```ts
+const fallbackLang = en
+
 const targetLang = ALL_LANGS[getLang()] as LocaleType
 
-const localeLang = targetLang
+// 合并后，如果目标语言缺失了字段，会使用备用语言的值
+const localeLang = merge(fallbackLang, targetLang)
 
 export default localeLang
 ```
@@ -231,4 +253,4 @@ export const App = (): JSX.Element => {
 
 这样就算是给我的electron应用加上了多语言的功能啦
 
-个人目前认为这样实现，各个语言文件进行分开编写，使用简单，后续维护也较为简单，但是可能会缺少一些功能？
+个人目前认为这样实现，各个语言文件进行分开编写，使用简单，后续维护也较为简单
