--- a/docs/project-setup/路由配置.md
+++ b/docs/project-setup/路由配置.md
@@ -1,3 +1,7 @@
+---
+sidebar_position: 3
+---
+
 ## 路由配置
 
 基本知识笔记：[StudyNote/react-router6.md](https://github.com/fengzai6/StudyNote/blob/main/240513-reactRouter6-组件传值/react-router6.md)
